examples/lua/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          generate_request_id: true
          tracing:
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                collector_cluster: jaeger
                collector_endpoint: "/api/v2/spans"
                shared_span_context: false
                collector_endpoint_version: HTTP_JSON
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "one"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "two"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "three"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "four"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "five"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "six"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "seven"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "eight"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "nine"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "ten"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "eleven"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweleve"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thirteen"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "fourteen"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "fifteen"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "sixteen"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "seventeen"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "eighteen"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "nineteen"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "twenty"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "twentyone"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "twentytwo"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweentythree"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweentyfour"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweentyfive"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweentysix"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweentyseven"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweentyeight"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "tweentynine"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thrity"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thrityone"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thritytwo"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thritythree"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thrityfour"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thrityfive"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "thritysix"
                route:
                  cluster: helloworld_service_cluster

              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneone"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetwo"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onethree"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onefour"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onefive"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onesix"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneseven"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneeight"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onenine"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneten"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneeleven"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetwelve"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onethirteen"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onefouteen"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onefifteen"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onesixteen"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneseventeen"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneeighteen"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "oneninteen"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetwenty"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentyone"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentytwo"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentythree"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentyfour"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweeentyfive"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentysix"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentyseven"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentyeight"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onetweentynine"
                route:
                  cluster: helloworld_service_cluster_1
              - match:
                  prefix: "/"
                  headers:
                    - name: accountId
                      exact_match: "onethrity"
                route:
                  cluster: helloworld_service_cluster_1

  clusters:
  - name: helloworld_service_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: helloworld_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld_service
                port_value: 8080
  - name: helloworld_service_cluster_1
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: helloworld_service_cluster_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld_service
                port_value: 8080
  - name: jaeger
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
